--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -888,3 +888,62 @@ footer div{
     background-color: #45a049;
   }
   
+
+  /* Styles pour la section contact */
+#contact {
+    background-color: #111;
+    color: #fff;
+    padding: 72px 0;
+}
+
+#contact h2 {
+    color: #fff;
+}
+
+#contact input[type="text"],
+#contact input[type="email"],
+#contact textarea {
+    background-color: #333;
+    color: #fff;
+    border: 1px solid #555;
+    padding: 12px;
+    margin-bottom: 20px;
+    width: 100%;
+}
+
+#contact textarea {
+    min-height: 150px;
+}
+
+#contact button {
+    background-color: #38b6ff;
+    color: #fff;
+    border: none;
+    padding: 15px 30px;
+    font-size: 18px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#contact button:hover {
+    background-color: #1e90ff;
+}
+
+.button {
+    background-color: #007bff; /* Couleur de fond bleue */
+    color: white; /* Couleur du texte blanc */
+    padding: 10px 20px; /* Espacement intérieur du bouton */
+    border: none; /* Suppression de la bordure */
+    border-radius: 5px; /* Bordure arrondie */
+    font-size: 16px; /* Taille de police */
+    cursor: pointer; /* Curseur de souris */
+    text-align: center; /* Alignement du texte au centre */
+    text-decoration: none; /* Suppression de la décoration du texte */
+    display: inline-block; /* Affichage en ligne */
+    transition: background-color 0.3s; /* Transition de couleur de fond */
+  }
+  
+  /* Style du bouton au survol */
+  .button:hover {
+    background-color: #0056b3; /* Couleur de fond plus foncée au survol */
+  }
