--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -947,3 +947,74 @@ footer div{
   .button:hover {
     background-color: #0056b3; /* Couleur de fond plus foncée au survol */
   }
+
+
+
+/* Styles pour les boutons de ressources */
+.resource-buttons {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin-top: 15px;
+}
+
+.resource-link {
+  background-color: #0e76a8;
+  color: #fff;
+  padding: 10px 20px;
+  border-radius: 25px;
+  text-decoration: none;
+  font-weight: 600;
+  transition: all 0.3s ease-in-out;
+}
+
+.resource-link:hover {
+  background-color: #005bb5;
+  transform: translateY(-5px);
+  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
+}
+
+/* Article Styling */
+.intervalCardReveal {
+  background: #f7f7f7;
+  padding: 20px;
+  border-radius: 12px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease-in-out;
+  margin-bottom: 30px;
+}
+
+.intervalCardReveal:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
+}
+
+.intervalCardReveal img {
+  display: block;
+  margin: 0 auto 15px;
+}
+
+.intervalCardReveal h3 {
+  text-align: center;
+  margin-bottom: 15px;
+  color: #333;
+}
+
+.intervalCardReveal p {
+  color: #555;
+}
+
+.download-btn-rect {
+  display: inline-block;
+  margin: 15px 0;
+  padding: 10px 20px;
+  background: #333;
+  color: #fff;
+  border-radius: 25px;
+  text-decoration: none;
+  transition: background 0.3s ease;
+}
+
+.download-btn-rect:hover {
+  background: #555;
+}
